classDiagram
    class Order {
        <<abstract>>
        #string description
        #string effect
        +Order()
        +Order(const Order& otherOrder)
        +operator=(const Order& otherOrder)
        +~Order()
        +validate()* bool
        +execute()* void
    }

    class Deploy {
        +Deploy()
        +Deploy(const Deploy& otherDeploy)
        +operator=(const Deploy& otherDeploy)
        +~Deploy()
        +validate() bool
        +execute() void
    }

    class Advance {
        +Advance()
        +Advance(const Advance& otherAdvance)
        +operator=(const Advance& otherAdvance)
        +~Advance()
        +validate() bool
        +execute() void
    }

    class Bomb {
        +Bomb()
        +Bomb(const Bomb& otherBomb)
        +operator=(const Bomb& otherBomb)
        +~Bomb()
        +validate() bool
        +execute() void
    }

    class Blockade {
        +Blockade()
        +Blockade(const Blockade& otherBlockade)
        +operator=(const Blockade& otherBlockade)
        +~Blockade()
        +validate() bool
        +execute() void
    }

    class Airlift {
        +Airlift()
        +Airlift(const Airlift& otherAirlift)
        +operator=(const Airlift& otherAirlift)
        +~Airlift()
        +validate() bool
        +execute() void
    }

    class Negotiate {
        +Negotiate()
        +Negotiate(const Negotiate& otherNegotiate)
        +operator=(const Negotiate& otherNegotiate)
        +~Negotiate()
        +validate() bool
        +execute() void
    }

    class OrdersList {
        -vector~Order*~ orders
        +OrdersList()
        +OrdersList(const OrdersList& other)
        +operator=(const OrdersList& other)
        +~OrdersList()
        +getOrders() OrdersList&
        +add(Order* order) void
        +print() void
        +remove(int index) void
        +move(int fromIndex, int toIndex) void
        +size() size_t
        +get(int index) Order*
    }

    %% Inheritance relationships
    Order <|-- Deploy
    Order <|-- Advance
    Order <|-- Bomb
    Order <|-- Blockade
    Order <|-- Airlift
    Order <|-- Negotiate

    %% Composition relationship
    OrdersList "1" --> "*" Order : contains
